Closed
Bug 335738
Opened 19 years ago
Closed 19 years ago
migration wizard does not appear after removing user's application support/firefox folder
Categories
(Firefox :: Migration, defect)
Tracking
()
RESOLVED
FIXED
Firefox 2 beta1
People
(Reporter: jbecerra, Assigned: mwu)
References
()
Details
(Keywords: fixed1.8.1, verified1.8.0.7)
Attachments
(1 file)
|
3.93 KB,
patch
|
benjamin
:
review+
dveditz
:
approval1.8.0.7+
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3
I was trying one of the installation smoketests which involes removing the Firefox folder from Application Support, which removes the profile, and relaunching the application to see whether the Migration Wizard comes up and prompts you to migrated from Safari or another browser.
Reproducible: Always
Steps to Reproduce:
1. Download the UB from the source above and install it.
2. Launch one first time and quit.
3. Remove the folder Application Support/Firefox from the current user's folder
4. Re-Launch Firefox
Actual Results:
It just loads a default profile and the migration wizard never shows up.
Expected Results:
Upon launch Migration Wizard should appear prompting you to migrate data (bookmarks, feeds, etc..) from Safari or any other browser you have installed.
I tried it on new macbook pro and iMac. On the iMac I also tried the latest version from the website 1.5.0.2, and a smilar thing happened.
| Reporter | ||
Updated•19 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 1•19 years ago
|
||
I see this on the Bon Echo a3 candidate on 10.4.6 too. Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1a3) Gecko/20060526 BonEcho/2.0a3
Flags: blocking-firefox2?
Updated•19 years ago
|
Component: Installer → Migration
QA Contact: installer → migration
Updated•19 years ago
|
Flags: blocking-firefox2? → blocking-firefox2+
Updated•19 years ago
|
Assignee: nobody → michael.wu
| Assignee | ||
Updated•19 years ago
|
Whiteboard: [SWAG: 2d]
Updated•19 years ago
|
Target Milestone: --- → Firefox 2 beta1
| Assignee | ||
Comment 2•19 years ago
|
||
This patch ensures that Safari and MacIE are detected as profiles to migrate on OSX if other (firefox/netscape/opera) browsers aren't installed. It also ensures that future profile migration code gets hooked in properly, assuming the writers of such code read the comments.
Attachment #225029 -
Flags: review?(bugs)
| Assignee | ||
Updated•19 years ago
|
Attachment #225029 -
Flags: review?(bugs) → review?(benjamin)
Updated•19 years ago
|
Attachment #225029 -
Flags: review?(benjamin) → review+
| Assignee | ||
Updated•19 years ago
|
Whiteboard: [SWAG: 2d] → [SWAG: 0d]
| Assignee | ||
Updated•19 years ago
|
Attachment #225029 -
Flags: approval1.8.1?
Comment 3•19 years ago
|
||
Comment on attachment 225029 [details] [diff] [review]
Fix migration issues on osx
Please get this landed and verified on trunk before requesting branch approval
Attachment #225029 -
Flags: approval1.8.1?
Comment 4•19 years ago
|
||
Verified FIXED using Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20060622 Minefield/3.0a1.
After moving the Firefox folder in ~/Library/Application support away and launching Firefox the migration wizard does indeed show.
Severity: normal → major
| Assignee | ||
Comment 5•19 years ago
|
||
Comment on attachment 225029 [details] [diff] [review]
Fix migration issues on osx
If the user does not have a phoenix, seamonkey, or opera profile already installed, the profile migrator will not show even if there is a Safari (most common case, probably) or a MacIE profile. This is a fairly simple and safe patch, and very important for a good number of people trying Firefox on OSX.
Attachment #225029 -
Flags: approval1.8.1?
Updated•19 years ago
|
Attachment #225029 -
Flags: approval1.8.1? → approval1.8.1+
Comment 6•19 years ago
|
||
iSpiked you can mark Verified Fixed.
Michael/iSpiked - when you land on 1.8.1 be sure to set the fixed1.8.1 and verified1.8.1 keywords as appropriate.
Updated•19 years ago
|
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•19 years ago
|
Keywords: fixed1.8.1
Comment 7•19 years ago
|
||
Comment on attachment 225029 [details] [diff] [review]
Fix migration issues on osx
We need to get this fix into 1.8.0 where the bug was originally reported.
Attachment #225029 -
Flags: approval1.8.0.6?
Updated•19 years ago
|
Flags: blocking1.8.0.6?
Comment 8•19 years ago
|
||
Comment on attachment 225029 [details] [diff] [review]
Fix migration issues on osx
approved for 1.8.0 branch, a=dveditz for drivers
Attachment #225029 -
Flags: approval1.8.0.7? → approval1.8.0.7+
Comment 9•19 years ago
|
||
Not blocking 1.8.0.x, but we'll take the patch if you get it in before the deadline.
Flags: blocking1.8.0.7? → blocking1.8.0.7-
| Assignee | ||
Updated•19 years ago
|
Whiteboard: [SWAG: 0d] → [checkin needed (1.8.0 branch)]
| Assignee | ||
Comment 10•19 years ago
|
||
Checking in browser/components/migration/content/migration.xul;
/cvsroot/mozilla/browser/components/migration/content/migration.xul,v <-- migration.xul
new revision: 1.18.2.4.2.1; previous revision: 1.18.2.4
done
Checking in browser/components/migration/src/nsProfileMigrator.cpp;
/cvsroot/mozilla/browser/components/migration/src/nsProfileMigrator.cpp,v <-- nsProfileMigrator.cpp
new revision: 1.16.4.1.4.1; previous revision: 1.16.4.1
done
Keywords: fixed1.8.0.7
Whiteboard: [checkin needed (1.8.0 branch)]
Comment 11•19 years ago
|
||
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.7pre) Gecko/20060829 Firefox/1.5.0.7pre
verified 1.8.0.7
profile manager is raised if you remove your Firefox/ directory. profile manager is also raised even if your only other installed browser is safari.
Keywords: fixed1.8.0.7 → verified1.8.0.7
You need to log in
before you can comment on or make changes to this bug.
Description
•