Bug 335738 - migration wizard does not appear after removing user's application support/firefox folder.  Patch by Michael Wu <michael.wu@mozilla.com>, r=bsmedberg